[package]
name = "pwd123"
version = "0.1.1"
edition = "2021"
description = "A simple , fast password generator , only includes one file"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.5.1"
clap = { version = "4.5.4", features = ["derive"] }
